--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 domain: http://littlebigpatcherteam.github.io
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://littlebigpatcherteam.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://littlebigpatcherteam.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
 
