--- a/_config.yml
+++ b/_config.yml
@@ -19,16 +19,11 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Your awesome title
-email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-domain: http://littlebigpatcherteam.github.io
+  Here you will find all of our projects, and links to their source codes and downloads
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://littlebigpatcherteam.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+github_username:  LittleBigPatcherTeam
 
 # Build settings
 theme: minima
