--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
+title: LittleBigPatcherTeam
 description: >- # this means to ignore newlines until "baseurl:"
   Here you will find all of our projects, and links to their source codes and downloads
 baseurl: "" # the subpath of your site, e.g. /blog
